Added some shapes and tied it into the audio recorder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
 
 
 
+    <string name="crazy_rect">Rectangle</string>
+    <string name="no_eq">None</string>
+    <string name="crazy_triangle">Triangle</string>
+
+
 </resources>
